--- a/core/src/main/resources/messages/messages_hr.properties
+++ b/core/src/main/resources/messages/messages_hr.properties
@@ -35,7 +35,7 @@ detection.result-likely-ai=Vjerojatno AI
 detection.result-likely-human=Vjerojatno čovjek
 detection.result-uncertain=Nesigurno
 detection.result-very-likely-ai=Vrlo vjerojatno AI
-download-student-report=Preuzmi popis ocjena
+download-student-report=Preuzmi izvještaj o ocjenama
 edit-user.title=Izmjena korisničkih podataka
 email=E-pošta
 email.attachments=Prilozi
